Zoom now only works over the trace area, instead of the entire canvas. This prevents asymmetric zoom on mobile where y-axis margin is quite large.

--- a/wxplotjs/scss/wxplot.scss
+++ b/wxplotjs/scss/wxplot.scss
@@ -120,9 +120,14 @@ div.wxplot-interval-control {
 	position: relative;
 }
 
-#wxplot-brush-indicator, #wxplot-brush {
+#wxplot-zoom, #wxplot-brush-indicator, #wxplot-brush {
 	position: absolute;
 	left: 0;
+}
+
+#wxplot-zoom {
+	top: 0;
+	z-index: 1;
 }
 
 #wxplot-brush-indicator {
